@@ -42,7 +42,8 @@ Configuration::Configuration()
 	population	= obj[0]->getLeaf("population");
 	populationblendamount	= obj[0]->getLeaf("populationblendamount");
 	HRETitle		= obj[0]->getLeaf("HRETitle");
-	mergeTitles		= obj[0]->getLeaf("mergeTitles");
+	mergeTitles	= obj[0]->getLeaf("mergeTitles");
+	vassalScore	= obj[0]->getLeaf("vassalScore");
 
 	advisors				= obj[0]->getLeaf("advisors");
 	leaders				= obj[0]->getLeaf("leaders");
