@@ -64,6 +64,13 @@ configuration =
 	#	"always"	- titles are merged whereever possible
 	mergeTitles = "inheritance"
 
+	# vassalScore: specifies the starting score for determining the results for CK2 vassals
+	#	1800 - all vassals become vassals in EU3
+	#	2800 - all vassals become vassals in EU3 and the liege gets cores
+	#	3900 - all vassals are absorbed in EU3, but cores remain
+	#	4950 - all vassals are absorbed in EU3, and cores are removed
+	vassalScore = "4950"
+
 
 	### EU3 Options ###
 
